--- a/cnn_1.ipynb
+++ b/cnn_1.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cải tiến mô hình CNN cho phân loại ảnh thật và giả\n",
-    "\n",
-    "Notebook này là phiên bản cải tiến của `simple-cnn.ipynb` với nhiều cải tiến về xử lý dữ liệu, kiến trúc mạng và kỹ thuật huấn luyện để nâng cao hiệu suất phân loại ảnh thật và giả."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1. Import các thư viện cần thiết"
    ]
   },
@@ -68,12 +59,12 @@
    ],
    "source": [
     "# Cấu hình\n",
-    "IMAGE_SIZE = (224, 224)  # Tăng kích thước ảnh để nắm bắt chi tiết tốt hơn\n",
-    "BATCH_SIZE = 32  # Tăng batch size để tăng tốc độ huấn luyện\n",
-    "EPOCHS = 30  # Tăng số lượng epochs nhưng sẽ dùng early stopping\n",
-    "FRAMES_PER_VIDEO = 15  # Tăng số lượng frames để nắm bắt thông tin thời gian tốt hơn\n",
+    "IMAGE_SIZE = (224, 224)  \n",
+    "BATCH_SIZE = 32 \n",
+    "EPOCHS = 30  \n",
+    "FRAMES_PER_VIDEO = 15  \n",
     "RANDOM_STATE = 42\n",
-    "MODEL_PATH = 'anti_spoofing_model.h5'\n",
+    "MODEL_PATH = 'cnn1.h5'\n",
     "\n",
     "# Đường dẫn dữ liệu\n",
     "dataset_path = \"anti-spoofing_data\"  \n",
@@ -98,7 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hàm tiền xử lý ảnh nâng cao\n",
     "def preprocess_image(image):\n",
     "    # Chuyển đổi không gian màu từ BGR sang RGB\n",
     "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
@@ -119,16 +109,15 @@
     "    data = []\n",
     "    labels = []\n",
     "    binary_labels = []  # Nhãn nhị phân: 0 = real, 1 = fake\n",
-    "    file_paths = []  # Lưu đường dẫn file để debug\n",
-    "    \n",
-    "    # Xác định các loại real và fake\n",
+    "    file_paths = []  \n",
+    "\n",
     "    real_categories = [\"live_selfie\", \"live_video\"]\n",
     "    fake_categories = [\"cut-out printouts\", \"printouts\", \"replay\"]\n",
     "    \n",
     "    for category in categories:\n",
     "        folder_path = os.path.join(dataset_path, category)\n",
     "        label = categories.index(category)\n",
-    "        binary_label = 0 if category in real_categories else 1  # 0 = real, 1 = fake\n",
+    "        binary_label = 0 if category in real_categories else 1 \n",
     "        \n",
     "        # Kiểm tra thư mục tồn tại\n",
     "        if not os.path.exists(folder_path):\n",
@@ -203,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,11 +205,9 @@
     }
    ],
    "source": [
-    "# Danh sách các loại dữ liệu\n",
     "categories = [\"live_selfie\", \"live_video\", \"cut-out printouts\", \"printouts\", \"replay\"]\n",
     "print(f\"Categories: {categories}\")\n",
     "\n",
-    "# Tải dữ liệu\n",
     "print(\"Loading data...\")"
    ]
   },
@@ -334,25 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_model(input_shape):\n",
-    "    \"\"\"\n",
-    "    Tạo mô hình CNN cho phân loại anti-spoofing nhị phân (Real vs Fake)\n",
-    "    \n",
-    "    Tại sao chọn phân loại nhị phân?\n",
-    "    - Đơn giản hóa vấn đề: chỉ cần phân biệt thật/giả\n",
-    "    - Tăng độ robust: mô hình học đặc trưng tổng quát hơn\n",
-    "    - Hiệu quả hơn: ít tham số, hội tụ nhanh hơn\n",
-    "    \n",
-    "    Args:\n",
-    "        input_shape: Kích thước đầu vào (height, width, channels)\n",
-    "        \n",
-    "    Returns:\n",
-    "        model: Mô hình đã được compile, sẵn sàng để training\n",
-    "    \"\"\"\n",
     "    # Sử dụng transfer learning với MobileNetV2\n",
     "    # Lý do chọn MobileNetV2: nhẹ, hiệu quả, phù hợp cho ứng dụng real-time\n",
     "    base_model = applications.MobileNetV2(\n",
@@ -397,7 +370,7 @@
     "    \n",
     "    model.compile(\n",
     "        optimizer=optimizer,\n",
-    "        loss='binary_crossentropy',  # Standard loss cho binary classification\n",
+    "        loss='binary_crossentropy',  \n",
     "        metrics=['accuracy', 'precision', 'recall']  # Metrics quan trọng cho anti-spoofing\n",
     "    )\n",
     "    \n",
@@ -553,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -733,7 +706,6 @@
     }
    ],
    "source": [
-    "# Callbacks - GIỮ NGUYÊN\n",
     "callbacks = [\n",
     "    EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True),\n",
     "    ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=1e-6),\n",
@@ -748,7 +720,6 @@
     "print(f\"Training labels shape: {binary_y_train_flat.shape}\")\n",
     "print(f\"Testing labels shape: {binary_y_test_flat.shape}\")\n",
     "\n",
-    "# Huấn luyện mô hình - CẢI TIẾN\n",
     "print(\"Training model...\")\n",
     "history = model.fit(\n",
     "    datagen.flow(X_train, binary_y_train_flat, batch_size=BATCH_SIZE),\n",
@@ -857,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1139,46 +1110,6 @@
     "    plt.title(f\"True: {true_label} Prediction: {pred_label} Confidence: {confidence:.2f}\")\n",
     "    plt.axis('off')\n",
     "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 11. Kết luận"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mô hình CNN cải tiến này đã được xây dựng với nhiều cải tiến so với mô hình ban đầu:\n",
-    "\n",
-    "1. **Cải tiến xử lý dữ liệu**:\n",
-    "   - Tăng kích thước ảnh đầu vào từ 100x100 lên 224x224\n",
-    "   - Tăng số lượng frames trích xuất từ 10 lên 15 frames\n",
-    "   - Thêm data augmentation để tăng cường dữ liệu huấn luyện\n",
-    "   - Xử lý lỗi mạnh mẽ hơn khi đọc video\n",
-    "   - Phân loại nhị phân (Real vs Fake) thay vì đa lớp\n",
-    "\n",
-    "2. **Cải tiến kiến trúc mạng**:\n",
-    "   - Sử dụng transfer learning với MobileNetV2 pre-trained\n",
-    "   - Thêm batch normalization để cải thiện tốc độ hội tụ\n",
-    "   - Thêm dropout để giảm overfitting\n",
-    "   - Kiến trúc sâu hơn với nhiều neurons hơn\n",
-    "\n",
-    "3. **Cải tiến quá trình huấn luyện**:\n",
-    "   - Thêm early stopping để tránh overfitting\n",
-    "   - Thêm learning rate scheduling để tối ưu hóa quá trình học\n",
-    "   - Lưu mô hình tốt nhất dựa trên validation accuracy\n",
-    "   - Tăng batch size và số epochs\n",
-    "\n",
-    "4. **Cải tiến đánh giá mô hình**:\n",
-    "   - Thêm ROC curve và AUC để đánh giá hiệu suất\n",
-    "   - Thêm các biểu đồ trực quan về accuracy, loss, confusion matrix\n",
-    "   - Lưu kết quả để sử dụng sau này\n",
-    "\n",
-    "Mô hình này có thể được sử dụng để phân loại ảnh thật và giả với độ chính xác cao hơn, đồng thời cung cấp các công cụ đánh giá và trực quan hóa kết quả tốt hơn."
    ]
   }
  ],
