--- a/cnn_2.ipynb
+++ b/cnn_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "71d234ba-3d18-4cae-a93a-7854b54cdc00",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "from mtcnn import MTCNN  # MTCNN face detector"
+    "from mtcnn import MTCNN "
    ]
   },
   {
